<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobActivity">

    <EditText
        android:id="@+id/updateJobTitle"
        android:layout_width="332dp"
        android:layout_height="51dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/title_holder"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateJobDescription"
        android:layout_width="337dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_holder"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/updateJobTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateJobTitle"
        app:layout_constraintTop_toBottomOf="@+id/updateJobTitle" />

    <EditText
        android:id="@+id/updateJobPrice"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/price_holder"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/updateJobDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateJobDescription"
        app:layout_constraintTop_toBottomOf="@+id/updateJobDescription" />


    <EditText
        android:id="@+id/updateDaysLeft"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/day_holder"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/updateJobPrice"
        app:layout_constraintTop_toBottomOf="@+id/updateJobDescription" />

    <CheckBox
        android:id="@+id/updateJobCheck"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="20dp"
        android:text="Expert"
        app:layout_constraintStart_toStartOf="@+id/updateJobPrice"
        app:layout_constraintTop_toBottomOf="@+id/updateDaysLeft" />


</androidx.constraintlayout.widget.ConstraintLayout>