<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobActivity">

    <EditText
        android:id="@+id/updateJobTitle"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/title_holder"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateJobDescription"
        android:layout_width="351dp"
        android:layout_height="114dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_holder"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/updateJobTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateJobTitle"
        app:layout_constraintTop_toBottomOf="@+id/updateJobTitle" />

    <EditText
        android:id="@+id/updateJobPrice"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/price_holder"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/updateJobDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateJobDescription"
        app:layout_constraintTop_toBottomOf="@+id/updateJobDescription" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="94dp"
        android:layout_height="59dp"
        android:layout_marginStart="268dp"
        android:layout_marginLeft="268dp"
        android:layout_marginTop="64dp"
        android:text="@string/cancel_button"
        app:backgroundTint="#6BB5F1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateJobPrice" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="288dp"
        android:layout_marginRight="288dp"
        android:background="#FFFFFF"
        android:text="@string/add_button"
        app:backgroundTint="#65B0EC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateJobPrice" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        android:text="Choose a name for your project"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/updateJobTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:text="Tell more about your project"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/updateJobDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateJobTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="What is your budget?"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateJobDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="How many days?"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/updateJobDescription" />

    <EditText
        android:id="@+id/updateDaysLeft"
        android:layout_width="168dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/day_holder"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/updateJobPrice"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/updateJobCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="16dp"
        android:text="Expert"
        app:layout_constraintStart_toStartOf="@+id/updateJobPrice"
        app:layout_constraintTop_toBottomOf="@+id/updateDaysLeft" />


</androidx.constraintlayout.widget.ConstraintLayout>